==> gdgly/stm32L151_nbiot_tmote_app_workspace/hc32L196_nbiot_tmote_app_boot/Hardware/QMC5883L/hal_qmc5883l.c <==
#include "hc32l19x_config.h"
#include "platform_config.h"
#include "platform_map.h"
#include "hal_qmc5883l.h"
#include "delay.h"
#include "usart.h"

static u8 QMC5883L_WriteByte(u8 ucRegAddr, u8 ucRegData)
{
	timeMeterTypeDef Qmctimer;
	
	HC32_TimeMeter_CountdownMS(&Qmctimer, 1000);
	
	/* Send Start Signal */
	I2C_SetFunc(QMC_I2C_TYPE, I2cStart_En);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	if (0x08 != I2C_GetState(QMC_I2C_TYPE)) {
		return Error;
	}
	I2C_ClearFunc(QMC_I2C_TYPE, I2cStart_En);
	
	/* Send I2C Slave Addr Write */
	I2C_WriteByte(QMC_I2C_TYPE, QMC5883L_SLAVE_ADDRESS_W);
	I2C_ClearIrq(QMC_I2C_TYPE);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	if (0x18 != I2C_GetState(QMC_I2C_TYPE)) {
		return Error;
	}
	
	/* Send Register Addr */
	I2C_WriteByte(QMC_I2C_TYPE, ucRegAddr);
	I2C_ClearIrq(QMC_I2C_TYPE);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	if (0x28 != I2C_GetState(QMC_I2C_TYPE)) {
		return Error;
	}
	
	/* Send Register Data */
	I2C_WriteByte(QMC_I2C_TYPE, ucRegData);
	I2C_ClearIrq(QMC_I2C_TYPE);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	if (0x28 != I2C_GetState(QMC_I2C_TYPE)) {
		return Error;
	}
	
	/* Send Stop Signal */
	I2C_SetFunc(QMC_I2C_TYPE, I2cStop_En);
	I2C_ClearIrq(QMC_I2C_TYPE);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	I2C_ClearFunc(QMC_I2C_TYPE, I2cStop_En);
	
	return 0;
}

static u8 QMC5883L_ReadByte(u8 ucRegAddr)
{
	u8 ucData;
	
	timeMeterTypeDef Qmctimer;
	
	HC32_TimeMeter_CountdownMS(&Qmctimer, 1000);
	
	/* Send Start Signal */
	I2C_SetFunc(QMC_I2C_TYPE, I2cStart_En);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	if (0x08 != I2C_GetState(QMC_I2C_TYPE)) {
		return Error;
	}
	I2C_ClearFunc(QMC_I2C_TYPE, I2cStart_En);
	
	/* Send I2C Slave Addr Write */
	I2C_WriteByte(QMC_I2C_TYPE, QMC5883L_SLAVE_ADDRESS_W);
	I2C_ClearIrq(QMC_I2C_TYPE);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	if (0x18 != I2C_GetState(QMC_I2C_TYPE)) {
		return Error;
	}
	
	/* Send Register Addr */
	I2C_WriteByte(QMC_I2C_TYPE, ucRegAddr);
	I2C_ClearIrq(QMC_I2C_TYPE);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	if (0x28 != I2C_GetState(QMC_I2C_TYPE)) {
		return Error;
	}
	
	/* Send Start Signal */
	I2C_SetFunc(QMC_I2C_TYPE, I2cStart_En);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	if (0x10 != I2C_GetState(QMC_I2C_TYPE)) {
		return Error;
	}
	I2C_ClearFunc(QMC_I2C_TYPE, I2cStart_En);
	
	/* Send I2C Slave Addr Read */
	I2C_WriteByte(QMC_I2C_TYPE, QMC5883L_SLAVE_ADDRESS_R);
	I2C_ClearIrq(QMC_I2C_TYPE);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	if (0x40 != I2C_GetState(QMC_I2C_TYPE)) {
		return Error;
	}
	
	/* Read Data */
	I2C_ClearIrq(QMC_I2C_TYPE);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	if (0x58 != I2C_GetState(QMC_I2C_TYPE)) {
		return Error;
	}
	ucData = I2C_ReadByte(QMC_I2C_TYPE);
	
	/* Send Stop Signal */
	I2C_SetFunc(QMC_I2C_TYPE, I2cStop_En);
	I2C_ClearIrq(QMC_I2C_TYPE);
	while (0 == I2C_GetIrq(QMC_I2C_TYPE)) {
		if (HC32_TimeMeter_IsExpiredMS(&Qmctimer) != false) {
			return ErrorTimeout;
		}
	}
	I2C_ClearFunc(QMC_I2C_TYPE, I2cStop_En);
	
	return ucData;
}

void QMC5883L_Drdy_Init(void)
{
	stc_gpio_cfg_t GPIO_Initure;
	
	DDL_ZERO_STRUCT(GPIO_Initure);
	
	GPIO_Initure.enDir			= GpioDirIn;
	GPIO_Initure.enDrv			= GpioDrvH;
	GPIO_Initure.enPu			= GpioPuDisable;
	GPIO_Initure.enPd			= GpioPdEnable;
	GPIO_Initure.enOD			= GpioOdDisable;
	GPIO_Initure.enCtrlMode		= GpioFastIO;
	Gpio_Init(QMC_DRDY_GPIOx, QMC_DRDY_PIN, &GPIO_Initure);
}

void QMC5883L_Drdy_DeInit(void)
{
	stc_gpio_cfg_t GPIO_Initure;
	
	DDL_ZERO_STRUCT(GPIO_Initure);
	
	GPIO_Initure.enDir			= GpioDirIn;
	GPIO_Initure.enDrv			= GpioDrvH;
	GPIO_Initure.enPu			= GpioPuDisable;
	GPIO_Initure.enPd			= GpioPdDisable;
	GPIO_Initure.enOD			= GpioOdDisable;
	GPIO_Initure.enCtrlMode		= GpioFastIO;
	Gpio_Init(QMC_DRDY_GPIOx, QMC_DRDY_PIN, &GPIO_Initure);
}

void QMC5883L_Discharge(void)
{
#if QMC_I2C_INTERFACE == QMC_I2C_INTERFACE0
	stc_gpio_cfg_t GPIO_Initure;
	
	DDL_ZERO_STRUCT(GPIO_Initure);
	
	GPIO_Initure.enDir			= GpioDirOut;
	GPIO_Initure.enDrv			= GpioDrvH;
	GPIO_Initure.enPu			= GpioPuDisable;
	GPIO_Initure.enPd			= GpioPdDisable;
	GPIO_Initure.enOD			= GpioOdDisable;
	
	Gpio_Init(I2C0_SCL_GPIOx, I2C0_SCL_PIN, &GPIO_Initure);
	Gpio_Init(I2C0_SDA_GPIOx, I2C0_SDA_PIN, &GPIO_Initure);
	
	Gpio_SetAfMode(I2C0_SCL_GPIOx, I2C0_SCL_PIN, GpioAf0);
	Gpio_SetAfMode(I2C0_SDA_GPIOx, I2C0_SDA_PIN, GpioAf0);
	
	Gpio_ClrIO(I2C0_SCL_GPIOx, I2C0_SCL_PIN);
	Gpio_ClrIO(I2C0_SDA_GPIOx, I2C0_SDA_PIN);
	Delay_MS(3000);
	Gpio_SetIO(I2C0_SCL_GPIOx, I2C0_SCL_PIN);
	Gpio_SetIO(I2C0_SDA_GPIOx, I2C0_SDA_PIN);
#endif
	
#if QMC_I2C_INTERFACE == QMC_I2C_INTERFACE1
	stc_gpio_cfg_t GPIO_Initure;
	
	DDL_ZERO_STRUCT(GPIO_Initure);
	
	GPIO_Initure.enDir			= GpioDirOut;
	GPIO_Initure.enDrv			= GpioDrvH;
	GPIO_Initure.enPu			= GpioPuDisable;
	GPIO_Initure.enPd			= GpioPdDisable;
	GPIO_Initure.enOD			= GpioOdDisable;
	
	Gpio_Init(I2C1_SCL_GPIOx, I2C1_SCL_PIN, &GPIO_Initure);
	Gpio_Init(I2C1_SDA_GPIOx, I2C1_SDA_PIN, &GPIO_Initure);
	
	Gpio_SetAfMode(I2C1_SCL_GPIOx, I2C1_SCL_PIN, GpioAf0);
	Gpio_SetAfMode(I2C1_SDA_GPIOx, I2C1_SDA_PIN, GpioAf0);
	
	Gpio_ClrIO(I2C1_SCL_GPIOx, I2C1_SCL_PIN);
	Gpio_ClrIO(I2C1_SDA_GPIOx, I2C1_SDA_PIN);
	Delay_MS(3000);
	Gpio_SetIO(I2C1_SCL_GPIOx, I2C1_SCL_PIN);
	Gpio_SetIO(I2C1_SDA_GPIOx, I2C1_SDA_PIN);
#endif
}

void QMC5883L_Init(void)
{
#if QMC_I2C_INTERFACE == QMC_I2C_INTERFACE0
	HC32_I2C0_Init(100000);
#endif
#if QMC_I2C_INTERFACE == QMC_I2C_INTERFACE1
	HC32_I2C1_Init(100000);
#endif
	
	QMC5883L_WriteByte(QMC5883L_CR2, QMC_SOFT_REST);
	
	QMC5883L_WriteByte(0x0B, 0x01);
	QMC5883L_WriteByte(0x20, 0x40);
	QMC5883L_WriteByte(0x21, 0x01);
	
	/* 64滤波, 8高斯范围, 200Hz输出, 初始化为StandBy */
	QMC5883L_WriteByte(QMC5883L_CR1, QMC_OSR_64 | QMC_RANGE_8G | QMC_RATES_200HZ | QMC_MODE_STANDBY);
	/* 引脚中断使能, 数据读取完指针自动偏转失能 */
	QMC5883L_WriteByte(QMC5883L_CR2, QMC_INT_ENABLE | QMC_POINT_ROLL_DISABLE);
	
	QMC5883L_Drdy_Init();
}
